--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,18 @@
 server:
-  port: 8080
+  port: 80
   max-http-header-size: 4048576
   servlet:
     context-path: /
+  tomcat:
+    uri-encoding: UTF-8
 spring:
+  http:
+    encoding:
+      charset: UTF-8
+      force: true
+      enabled: true
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/myblog?serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/myblog?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -32,3 +39,7 @@ mybatis-plus:
 logging:
   level:
     com.learn.myblog: debug
+#upload-file-path: /usr/mysoft/myblogFile
+#upload-file-img-outPath: /usr/mysoft/myblogFile/cut
+upload-file-path: E:\myblogupload
+upload-file-img-outPath: E:\myblogupload\cut
